	these cases by drawing a line trhough the points, and issuing a
	warning from chol(): "the matrix is either rank-deficient or
	indefinite". Earlier we required at least three points for an
	ellipse, but these could still be on a line and fail. Now we
	accept two points, and draw the line with a warning. The problem
	with three points was reported by Paul Bacquet (Louvain,
	Belgium). 

	* tabasco: "hclust" objects (use, sp.ind) are reordered using
	weighted means. This is a better method than the unweighted means
	used for reordering of dendrograms. Earlier "hclust" objects were
	changed to dendrograms, but now we provide reorder.hclust() and
	rev.hclust() in vegan, and can use improved method of ordering the
	table. Dendrogram and hclust labels must match the community data
	names, and now the community matrix is internally reordered to
	match the dendrograms. This requires that the clusterings do have
	labels attributes.

	* treedive, treedist: default is now match.force = TRUE, and
	treedive() gained new argument 'verbose' to turn of most messages
	-- which is practical in oecosimu().

	* BCI: names checked after http://www.theplantlist.org, but kept
	the old (alphabetic) order of species. The changes are: Abarema
	macradenium -> A. macradenia, Apeiba aspera -> A. glabra,
	Aspidosperma cruenta -> A. desmanthum, Cassipourea ellipitica ->
	C. guianensis, Chlorophora tinctoria -> Maclura t., Coccoloba
	manzanillensis -> C. manzinellensis, Cupania sylvatica ->
	C. seemannii, Dipteryx panamensis -> D. oleifera, Eugenia
	coloradensis -> E. florida, Eugenia oerstedeana -> E. oerstediana,
	Inga marginata -> I. semialata, Lonchocarpus latifolius ->
	L. heptaphyllus (this is ambiguous, since Hebestichma cubense is
	another alternative), Maquira costaricana -> Maquira guianensis
	var. costaricana, Phoebe cinnamomifolia -> Cinnamomum triplinerve,
	Swartzia simplex var. ochnaceae -> var. continentalis, Tabebuia